[IndexedDB] Fixed possible refcount race

BUG=716728

Review-Url: https://codereview.chromium.org/2892703003
Cr-Commit-Position: refs/heads/master@{#473029}

Former-commit-id: 957b96d1ad97e774141de94caec6644174f5d651